# invenio-rdm-records

./: setup.cfg
invenio_rdm_records/: __init__.py  ext.py  oarepo_changes.py
invenio_rdm_records/assets/semantic-ui/js/invenio_rdm_records/src/deposit/: store.js
invenio_rdm_records/assets/semantic-ui/js/invenio_rdm_records/src/deposit/api/: DepositApiClient.js  DepositFilesService.js  DepositFormApp.js  index.js
invenio_rdm_records/assets/semantic-ui/js/invenio_rdm_records/src/deposit/fields/FileUploader/: FileUploader.js  FileUploaderArea.js  hooks.js  index.js
invenio_rdm_records/assets/semantic-ui/js/invenio_rdm_records/src/deposit/fields/UppyUploader/: InvenioMultipartUploader.js  UppyUploader.js
invenio_rdm_records/assets/semantic-ui/js/invenio_rdm_records/src/deposit/state/actions/: deposit.js  files.js
invenio_rdm_records/assets/semantic-ui/js/invenio_rdm_records/src/deposit/state/reducers/: files.js
invenio_rdm_records/resources/: config.py
invenio_rdm_records/services/: config.py  generators.py  permissions.py
invenio_rdm_records/services/components/: pids.py
invenio_rdm_records/services/files/: service.py
invenio_rdm_records/services/files/extractors/: __init__.py  opened_entry.py  reply_stream.py  zip.py
invenio_rdm_records/services/files/processors/: __init__.py  zip.py
invenio_rdm_records/services/pids/: service.py
invenio_rdm_records/services/review/: service.py
tests/: conftest.py
tests/services/files/: test_zip_listing.py  test_zip_listing_extraction.py
