# -*- coding: utf-8 -*-
#
# Copyright (C) 2019-2024 CERN.
# Copyright (C) 2019 Northwestern University.
# Copyright (C) 2022 Universität Hamburg.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio-RDM-Records is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-rdm-records
version = attr: invenio_rdm_records.__version__
description = InvenioRDM module for the communities feature.
long_description = file: README.rst, CHANGES.rst
keywords = invenio rdm data model
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-rdm-records
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    arrow>=0.17.0
    babel-edtf>=1.1.0
    citeproc-py-styles>=0.1.2,<1.0.0
    citeproc-py>=0.6.0
    commonmeta-py>=0.8.4,<0.8.7
    datacite>=1.1.1,<2.0.0
    dcxml>=0.1.2,<1.0.0
    Faker>=2.0.3
    flask-iiif>=1.0.0,<2.0.0
    ftfy>=4.4.3,<5.0.0
    invenio-administration>=2.0.0,<3.0.0
    invenio-communities>=13.0.0,<14.0.0
    invenio-drafts-resources>=3.0.0,<4.0.0
    invenio-records-resources>=5.3.0,<6.0.0
    invenio-github>=1.0.0,<2.0.0
    invenio-i18n>=2.0.0,<3.0.0
    invenio-oaiserver>=2.0.0,<3.0.0
    invenio-oauth2server>=2.0.0
    invenio-stats>=4.0.0,<5.0.0
    invenio-vocabularies>=3.0.0,<4.0.0
    nameparser>=1.1.1
    pycountry>=22.3.5
    pydash>=6.0.0,<7.0.0
    pytz>=2020.4
    pyyaml>=5.4.0
    python-slugify>=8.0.1
    # Upper pinning due to commonmeta-py
    types-requests<2.31.0.7

[options.extras_require]
# removed-by-oarepo tests =
# removed-by-oarepo     pytest-black-ng>=0.4.0
# removed-by-oarepo     invenio-app>=1.4.0,<2.0.0
# removed-by-oarepo     invenio-db[postgresql,mysql]>=1.0.14,<2.0.0
# removed-by-oarepo     pytest-invenio>=2.1.0,<3.0.0
# removed-by-oarepo     pytest-mock>=1.6.0
# removed-by-oarepo     sphinx>=4.5.0
# removed-by-oarepo     tripoli~=2.0.0
# removed-by-oarepo elasticsearch7 =
# removed-by-oarepo     invenio-search[elasticsearch7]>=2.1.0,<3.0.0
# removed-by-oarepo opensearch1 =
# removed-by-oarepo     invenio-search[opensearch1]>=2.1.0,<3.0.0
# removed-by-oarepo opensearch2 =
# removed-by-oarepo     invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
# removed-by-oarepo flask.commands =
# removed-by-oarepo     rdm-records = invenio_rdm_records.cli:rdm_records
# removed-by-oarepo invenio_base.apps =
# removed-by-oarepo     invenio_rdm_records = invenio_rdm_records:InvenioRDMRecords
# removed-by-oarepo invenio_base.api_apps =
# removed-by-oarepo     invenio_rdm_records = invenio_rdm_records:InvenioRDMRecords
# removed-by-oarepo invenio_base.api_blueprints =
# removed-by-oarepo     invenio_rdm_records = invenio_rdm_records.views:create_records_bp
# removed-by-oarepo     invenio_rdm_records_draft_files = invenio_rdm_records.views:create_draft_files_bp
# removed-by-oarepo     invenio_rdm_records_draft_media_files = invenio_rdm_records.views:create_draft_media_files_bp
# removed-by-oarepo     invenio_rdm_records_ext = invenio_rdm_records.views:blueprint
# removed-by-oarepo     invenio_rdm_records_parent_links = invenio_rdm_records.views:create_parent_record_links_bp
# removed-by-oarepo     invenio_rdm_records_parent_grants = invenio_rdm_records.views:create_parent_grants_bp
# removed-by-oarepo     invenio_rdm_records_user_access = invenio_rdm_records.views:create_grant_user_access_bp
# removed-by-oarepo     invenio_rdm_records_group_access = invenio_rdm_records.views:create_grant_group_access_bp
# removed-by-oarepo     invenio_rdm_records_record_files = invenio_rdm_records.views:create_record_files_bp
# removed-by-oarepo     invenio_rdm_records_record_media_files = invenio_rdm_records.views:create_record_media_files_bp
# removed-by-oarepo     invenio_rdm_community_records = invenio_rdm_records.views:create_community_records_bp
# removed-by-oarepo     invenio_oaipmh_server = invenio_rdm_records.views:create_oaipmh_server_blueprint_from_app
# removed-by-oarepo     invenio_rdm_record_communities = invenio_rdm_records.views:create_record_communities_bp
# removed-by-oarepo     invenio_rdm_record_requests = invenio_rdm_records.views:create_record_requests_bp
# removed-by-oarepo     invenio_iiif = invenio_rdm_records.views:create_iiif_bp
# removed-by-oarepo invenio_base.api_finalize_app =
# removed-by-oarepo     invenio_rdm_records = invenio_rdm_records.ext:api_finalize_app
# removed-by-oarepo invenio_base.blueprints =
# removed-by-oarepo     invenio_rdm_records_ext = invenio_rdm_records.views:blueprint
# removed-by-oarepo invenio_base.finalize_app =
# removed-by-oarepo     invenio_rdm_records = invenio_rdm_records.ext:finalize_app
# removed-by-oarepo invenio_celery.tasks =
# removed-by-oarepo     invenio_rdm_records_fixtures = invenio_rdm_records.fixtures.tasks
# removed-by-oarepo     invenio_rdm_records_services = invenio_rdm_records.services.tasks
# removed-by-oarepo     invenio_rdm_records_access_requests = invenio_rdm_records.requests.access.tasks
# removed-by-oarepo     invenio_rdm_records_iiif = invenio_rdm_records.services.iiif.tasks
# removed-by-oarepo invenio_db.models =
# removed-by-oarepo     invenio_rdm_records = invenio_rdm_records.records.models
# removed-by-oarepo invenio_db.alembic =
# removed-by-oarepo     invenio_rdm_records = invenio_rdm_records:alembic
invenio_jsonschemas.schemas =
    invenio_rdm_records = invenio_rdm_records.records.jsonschemas
# removed-by-oarepo invenio_search.mappings =
# removed-by-oarepo     rdmrecords = invenio_rdm_records.records.mappings
# removed-by-oarepo invenio_i18n.translations =
# removed-by-oarepo     invenio_rdm_records = invenio_rdm_records
# removed-by-oarepo invenio_requests.types =
# removed-by-oarepo     community_inclusion = invenio_rdm_records.requests:CommunityInclusion
# removed-by-oarepo     community_submission = invenio_rdm_records.requests:CommunitySubmission
# removed-by-oarepo     user_access_request = invenio_rdm_records.requests:UserAccessRequest
# removed-by-oarepo     guest_access_request = invenio_rdm_records.requests:GuestAccessRequest
# removed-by-oarepo invenio_requests.entity_resolvers =
# removed-by-oarepo     records = invenio_rdm_records.requests.entity_resolvers:RDMRecordResolver
# removed-by-oarepo     email = invenio_rdm_records.requests.entity_resolvers:EmailResolver
# removed-by-oarepo invenio_administration.views =
# removed-by-oarepo     invenio_rdm_records_oai_list = invenio_rdm_records.administration.views.oai:OaiPmhListView
# removed-by-oarepo     invenio_rdm_records_oai_edit = invenio_rdm_records.administration.views.oai:OaiPmhEditView
# removed-by-oarepo     invenio_rdm_records_oai_create = invenio_rdm_records.administration.views.oai:OaiPmhCreateView
# removed-by-oarepo     invenio_rdm_records_details = invenio_rdm_records.administration.views.oai:OaiPmhDetailView
invenio_assets.webpack =
    invenio_rdm_records = invenio_rdm_records.webpack:theme
# removed-by-oarepo invenio_oauth2server.scopes =
# removed-by-oarepo     tokens_generate_scope = invenio_rdm_records.tokens.scopes:tokens_generate_scope
# removed-by-oarepo invenio_users_resources.moderation.actions =
# removed-by-oarepo     block = invenio_rdm_records.requests.user_moderation.actions:on_block
# removed-by-oarepo     restore = invenio_rdm_records.requests.user_moderation.actions:on_restore
# removed-by-oarepo     approve = invenio_rdm_records.requests.user_moderation.actions:on_approve

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[compile_catalog]
directory = invenio_rdm_records/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_rdm_records/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_rdm_records/translations/messages.pot
output-dir = invenio_rdm_records/translations/

[update_catalog]
input-file = invenio_rdm_records/translations/messages.pot
output-dir = invenio_rdm_records/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_rdm_records --cov-report=term-missing
testpaths = docs tests invenio_rdm_records
